--- a/files/index.html
+++ b/files/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOES Far Western University</title>
 
     <!-- link to css of this file -->
     <link rel="stylesheet" href="styles/index.css">
@@ -18,18 +18,18 @@
     <script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
     <!-- end of SVG -->
 	
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.jpeg" />
 
 </head>
 <body>
     <!-- Header -->
-    <header style="background-color: white;">
+    <header style="background-color: rgb(255, 255, 255);">
         <nav class="navbar">
             <div class="brand-title">
                 <a href="#">
-                    <img src="images/cssclub.png" alt="" style="float: left; width: 45px;
+                    <img src="images/logo.jpeg" alt="" style="float: left; width: 45px;
                     height: 50px;">
-                    <p role="text" style="float: right;">John Jay College <br> Computer Science Society Club</p>
+                    <p role="text" style="float: right;">School of Engineering<br> Society Club</p>
                 </a>
             </div>
             <a href="#" class="toggle-button" >
@@ -43,7 +43,7 @@
                     <li><a href="events.html">Events</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="collaborate.html">Collaborate</a></li>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" style="background-color:  #CE4A4A; border-radius: 5rem; color: white;" target="_blank" rel="noreferrer noopener">Join the Club</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdFrJ8y-dtQ10W7aS0q3pGH0ts0rvx65R2jjYxXaMKq2kgJg/viewform?usp=sf_link" style="background-color:  #CE4A4A; border-radius: 5rem; color: white;" target="_blank" rel="noreferrer noopener">Join the Club</a></li>
                 </ul>
             </div>
         </nav>
@@ -55,23 +55,23 @@
     <!-- Welcome section -->
     <div class="welcome-flex-container">
         <div class="welcome-main-content">
-          <p class="welcome-section-title">Computer Science <br>Society Club</p>
+          <p class="welcome-section-title">School of Engineering <br>Society Club</p>
           <p class="welcome-section-description">
-            A community driven club with the aim of helping and providing Computer Science students with all the necessary skills to succeed in their career. Every semester we make it our goal to have unique events for our club members. Come and join us for one of our exciting events!
+            A community driven club with the aim of helping and providing civil & Computer Engineering students with all the necessary skills to succeed in their career. Every semester we make it our goal to have unique events for our club members. Come and join us for one of our exciting events!
           </p>
 
             <div class= "welcome-buttons-section">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Join The Club</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScdFrJ8y-dtQ10W7aS0q3pGH0ts0rvx65R2jjYxXaMKq2kgJg/viewform?usp=sf_link" class="welcome-button-join" target="_blank" rel="noreferrer noopener">Join The Club</a>
                     &nbsp; &nbsp;
                 <a href="about.html" class="welcome-button-about">About Us</a>
             </div>
 
-            <a href="https://github.com/jjcss"><i class="fab fa-github fa-lg desc" aria-hidden="true" style="color: black; padding-top: 20px;"></i></a>
+            <a href="https://github.com/pradipbhatt"><i class="fab fa-github fa-lg desc" aria-hidden="true" style="color: black; padding-top: 20px;"></i></a>
 
             &nbsp;
             &nbsp; 
 
-            <a href="https://discord.gg/fJZKErEnPa"><i class="fab fa-discord fa-lg desc" style="color: #5865F2;"></i></a>
+            <!-- <a href="https://discord.gg/fJZKErEnPa"><i class="fab fa-discord fa-lg desc" style="color: #5865F2;"></i></a> -->
         </div>
     
         <div class="sidebar">
@@ -86,7 +86,7 @@
             <p class="about-section-title">What the Club is About</p>
 
             <p class="about-section-description">
-            We are a student let club organiztion that believes in helping Computer Science students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech related skills. <br><br> Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.
+            We are the students let club organiztion that believes in helping  BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields  related skills. <br><br> Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.
             </p>
 
             <div class= "about-button-section">
@@ -95,7 +95,7 @@
         </div>
     
         <div class="about-img-section">
-          <img src="images/teamwork4.webp" alt="" class="about-img">
+          <img src="images/teamwork41.gif" alt="" class="about-img">
         </div>
     </div>
     <!-- end of about section  -->
@@ -172,23 +172,23 @@
         </div>
         <div class="column-center">
             <!-- <a href="mailto:computersocjjay@gmail.com"><i class="fas fa-envelope-square fa-lg" style="color: #FBBC05;"></i></a> -->
-            <a href="mailto:computersocjjay@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
+            <a href="mailto:bhattsammar04@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
 
                     |
 			
-            <a href="https://github.com/jjcss" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: white;"></i></a>
+            <a href="https://github.com/pradipbhatt" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: white;"></i></a>
 
                     |
 			
-            <a href="https://www.instagram.com/jjccomputerscience/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #C13584;"></i></a>
+            <a href="https://www.instagram.com/pradipbhatt3/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #C13584;"></i></a>
 
                     |
 			
-            <a href="https://discord.gg/EMFTqSUYNu" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #5865F2;"></i></a>
-            <p id="" class="middleP2" style="text-align: center; color: white;">©2022 John Jay College Computer Science Society Club <br>524 W 59th St, New York, NY 11109 <br> computersocjjay@gmail.com</p>
+            <a href="https://www.instagram.com/pradipbhatt3/" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #5865F2;"></i></a>
+            <p id="" class="middleP2" style="text-align: center; color: white;">©2022 Pradip Bhatt School of Engineering Society Club <br>Campus road St, Mahaendranagr, MNR <br> bhattsammar04@gmail.column-left</p>
         </div>
         <div class="column-right">
-            <a href="https://www.jjay.cuny.edu/" target="_blank" rel="noreferrer noopener"><img src="images/jjay2.png" alt=""></a>
+            <a href="https://www.fwneng.com/" target="_blank" rel="noreferrer noopener"><img src="images/fwuimg.jpeg" alt=""></a>
         </div>
      </div>
      <!-- end of footer -->
