--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
             <div class="navbar-links" style="padding-right: 5%; padding-left: 5%;">
                 <ul>
                     <li><a href="#">About</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li><a href="events.html">Events of SOES</a></li>
+                    <li><a href="constitution.html">Constituition</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="collaborate.html">Collaborate</a></li>
                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdFrJ8y-dtQ10W7aS0q3pGH0ts0rvx65R2jjYxXaMKq2kgJg/viewform?usp=sf_link" style="background-color: #CE4A4A; border-radius: 5rem; color: rgb(255, 255, 255);" target="_blank" rel="noreferrer noopener">Join the Club</a></li>
