--- a/collaborate.html
+++ b/collaborate.html
@@ -27,9 +27,9 @@
         <nav class="navbar">
             <div class="brand-title">
                 <a href="index.html">
-                    <img src="images/cssclub.png" alt="" style="float: left; width: 45px;
+                    <img src="images/logo.jpeg" alt="" style="float: left; width: 45px;
                     height: 50px;">
-                    <p role="text" style="float: right;">John Jay College <br> Computer Science Society Club</p>
+                    <p role="text" style="float: right;">Far Western University <br> Society Of Engineering</p>
                 </a>
             </div>
             <a href="#" class="toggle-button" >
@@ -43,7 +43,7 @@
                     <li><a href="events.html">Events</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="collaborate.html">Collaborate</a></li>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" target="_blank" rel="noreferrer noopener" style="background-color:  #CE4A4A; border-radius: 5rem; color: white; ">Join the Club</a></li>
+                    <!-- <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" target="_blank" rel="noreferrer noopener" style="background-color:  #CE4A4A; border-radius: 5rem; color: white; ">Join the Club</a></li> -->
                 </ul>
             </div>
         </nav>
@@ -68,7 +68,7 @@
                 </ul>
             </div>
             <div class="apply-to-positions-button">
-             <a href="https://forms.gle/TBptBn7BahaoHWS78" target="_blank" rel="noreferrer noopener"><button>Apply</button></a>
+             <!-- <a href="https://forms.gle/TBptBn7BahaoHWS78" target="_blank" rel="noreferrer noopener"><button>Apply</button></a> -->
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
             </div>
             <div class="share-project-ideas-text">
                 <p >If you have any ideas for a collaborative project, please let us know. We will share it with the community and invite others to join you on the project.</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3-24Gs_5AHSFtiviAkmV7ldE-bBlKuweIExobShcZ2V84zw/viewform" target="_blank" rel="noreferrer noopener"><button>Fill Out The Form</button></a>
+                <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3-24Gs_5AHSFtiviAkmV7ldE-bBlKuweIExobShcZ2V84zw/viewform" target="_blank" rel="noreferrer noopener"><button>Fill Out The Form</button></a> -->
             </div>
         </div>
     </section>
@@ -92,7 +92,7 @@
                 <p>Let us know if you have any suggestions, comments, or concerns. Your feedback is valuable and gives us the ability to improve the club.</p>
             </div>
             <div class="suggestions-button">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3-24Gs_5AHSFtiviAkmV7ldE-bBlKuweIExobShcZ2V84zw/viewform" target="_blank" rel="noreferrer noopener"><button>Share It With Us</button></a>
+                <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3-24Gs_5AHSFtiviAkmV7ldE-bBlKuweIExobShcZ2V84zw/viewform" target="_blank" rel="noreferrer noopener"><button>Share It With Us</button></a> -->
             </div>
         </div>
     </section>
@@ -104,23 +104,23 @@
         </div>
         <div class="column-center">
             <!-- <a href="mailto:computersocjjay@gmail.com"><i class="fas fa-envelope-square fa-lg" style="color: #FBBC05;"></i></a> -->
-            <a href="mailto:computersocjjay@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
+            <a href="mailto:bhattsammar04@gmail.com"><i class="iconify" data-icon="logos:google-gmail" data-width="20" data-height="15"></i></a>
 
                     |
 			
-            <a href="https://github.com/jjcss" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: white;"></i></a>
+            <a href="https://github.com/pradipbhatt" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-lg" aria-hidden="true" style="color: white;"></i></a>
 
                     |
 			
-            <a href="https://www.instagram.com/jjccomputerscience/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #C13584;"></i></a>
+            <a href="https://www.instagram.com/pradipbhatt3/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram fa-lg" style="color: #C13584;"></i></a>
 
                     |
 			
-            <a href="https://discord.gg/EMFTqSUYNu" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #5865F2;"></i></a>
-            <p id="" class="middleP2" style="text-align: center; color: white;">©2022 John Jay College Computer Science Society Club <br>524 W 59th St, New York, NY 11109 <br> computersocjjay@gmail.com</p>
+            <!-- <a href="https://discord.gg/EMFTqSUYNu" target="_blank" rel="noreferrer noopener"><i class="fab fa-discord fa-lg" style="color: #5865F2;"></i></a> -->
+            <p id="" class="middleP2" style="text-align: center; color: white;"Computer Science Society Club <br>mnr<br> bhattsammar04</p>
         </div>
         <div class="column-right">
-            <a href="https://www.jjay.cuny.edu/" target="_blank" rel="noreferrer noopener"><img src="images/jjay2.png" alt=""></a>
+            <!-- <a href="https://www.jjay.cuny.edu/" target="_blank" rel="noreferrer noopener"><img src="images/jjay2.png" alt=""></a> -->
         </div>
      </div>
 
