--- a/constitution.html
+++ b/constitution.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constituion</title>
+    <style>
+        *{
+            color: rgb(0, 0, 0);
+            background-color: rgb(152, 175, 175);
+        }
+    </style>
 </head>
 <body>
-    <p>This is for the Constituion page</p>
+    <h2>This is for the Constituion page</h2>
       <a href="https://drive.google.com/file/d/1aNVcNTieWtCjBxKOVtSMRSiRu0MjHs3S/view?usp=sharing"><button>Constituion</button></a>
-      <p>Click on Above button</p>
+      <p>Click on Above button for open constitution</p>
 </body>
 </html>
