--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- link to css of this file -->
     <link rel="stylesheet" href="styles/resources.css">
 
@@ -26,28 +26,67 @@
 <body>
     <!-- Header -->
     <header style="background-color: white;">
-        <nav class="navbar">
-            <div class="brand-title">
-                <a href="index.html">
-                    <img src="images/cssclub.png" alt="" style="float: left;">
-                    <p role="text" style="float: right;">John Jay College <br> Computer Science Society Club</p>
-                </a>
-            </div>
-            <a href="#" class="toggle-button" >
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="navbar-links" style="padding-right: 5%; padding-left: 5%;">
-              <ul>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="events.html">Events</a></li>
-                  <li><a href="resources.html">Resources</a></li>
-                  <li><a href="collaborate.html">Collaborate</a></li>
-                  <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" style="background-color: #CE4A4A; border-radius: 5rem; color: white;" target="_blank" rel="noreferrer noopener">Join the Club</a></li>
+         <!-- Navbar starts From here -->
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Homepage</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <!-- Our teams-->
+<div class="btn-group">
+    <button type="button" class="btn btn-dark">Our Team</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our teams</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Executive committee</a>
+      <a class="dropdown-item" href="#">Advisory Team</a>
+      <a class="dropdown-item" href="#">Community Coordinators</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Suporting Leads</a>
+    </div>
+  </div>
+
+                  <!-- Publications-->
+<div class="btn-group">
+    <button type="button" class="btn btn-dark">Publications</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our Publications</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="constitution.html">constitution</a>
+      <a class="dropdown-item" href="#">Book-2</a>
+      <a class="dropdown-item" href="#">Book-3</a>
+  </div>            
+
+  <!-- News and Notices -->
+  <a class="nav-link" href="#">News and Notices <span class="sr-only">(current)</span></a>
+  <!-- Events -->
+  <div class="btn-group">
+    <button type="button" class="btn btn-dark">Programs</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our Programs</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Poem Compitision</a>
+      <a class="dropdown-item" href="#">Art- Compitision</a>
+      <a class="dropdown-item" href="#">others</a>
+  </div>   
+  <!-- Contact info -->
+  <a class="nav-link" href="#">Contact info <span class="sr-only">(current)</span></a>
               </ul>
-          </div>
-        </nav>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav> 
         <hr class="rounded">
     </header>
     <!-- End of Header -->
