--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/test.css">
 
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -14,22 +15,67 @@
 
     <div class="collaborate-flex-container" >
         <div class="collaborate-img-section">
-            <img src="../images/collab.png" alt="" class="collaborate-img">
-        </div>
-
-        <div class="collaborate-main-content">
-            <p class="collaborate-section-title">Collaborate</p>
-
-            <p class="collaborate-section-description">
-                Here at the Computer Society Club, we want to help out as many students as we can. For that reason, we’ve decided to open up Assistant Executive positions on our board, to get fellow members more involved with the club and hopefully one day, into the Executive position. Come and checkout our open positions and apply.
-            </p>
-
-            <div class= "collaborate-button-section">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaMK6d0-Rtbl9VybcUHBI0f9vQCGKXSb8MIISrhrdiUemKKA/viewform?usp=pp_url" ><button class="collaborate-button">Learn More</button></a>
-            </div>
-        </div>
+        <!-- Navbar starts From here -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Homepage</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <!-- Our teams-->
+<div class="btn-group">
+    <button type="button" class="btn btn-dark">Our Team</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our teams</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Executive committee</a>
+      <a class="dropdown-item" href="#">Advisory Team</a>
+      <a class="dropdown-item" href="#">Community Coordinators</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Suporting Leads</a>
     </div>
+  </div>
 
+                  <!-- Publications-->
+<div class="btn-group">
+    <button type="button" class="btn btn-dark">Publications</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our Publications</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="constitution.html">constitution</a>
+      <a class="dropdown-item" href="#">Book-2</a>
+      <a class="dropdown-item" href="#">Book-3</a>
+  </div>            
+
+  <!-- News and Notices -->
+  <a class="nav-link" href="#">News and Notices <span class="sr-only">(current)</span></a>
+  <!-- Events -->
+  <div class="btn-group">
+    <button type="button" class="btn btn-dark">Programs</button>
+    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="sr-only">Our Programs</span>
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Poem Compitision</a>
+      <a class="dropdown-item" href="#">Art- Compitision</a>
+      <a class="dropdown-item" href="#">others</a>
+  </div>   
+  <!-- Contact info -->
+  <a class="nav-link" href="#">Contact info <span class="sr-only">(current)</span></a>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav> 
     <a href="index.html">home</a>
 
 
