--- a/test.html
+++ b/test.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="../styles/test.css">
 
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHXX8JNY0K');
+</script>
 
 </head>
 <body>
