--- a/resources.html
+++ b/resources.html
@@ -21,6 +21,15 @@
     <!-- End of Load jQuery-->
 	
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHXX8JNY0K');
+</script>
 	
 </head>
 <body>
