--- a/events.html
+++ b/events.html
@@ -22,6 +22,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHXX8JNY0K');
+</script>
 	
 </head>
 <body>
