--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 </li>
                 <!-- Our teams-->
 <div class="btn-group">
-    <button type="button" class="btn btn-dark">Our Team</button>
+    <button type="button" class="btn btn-dark" >Our Team</button>
     <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="sr-only">Our teams</span>
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Executive committee</a>
-      <a class="dropdown-item" href="#">Advisory Team</a>
-      <a class="dropdown-item" href="#">Community Coordinators</a>
+      <a class="dropdown-item" href="Executives.html">Executive committee</a>
+      <a class="dropdown-item" href="Advisory.html">Advisory Team</a>
+      <a class="dropdown-item" href="Commnity_Coordinators.html">Community Coordinators</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="#">Suporting Leads</a>
     </div>
@@ -78,7 +78,7 @@
       <a class="dropdown-item" href="#">others</a>
   </div>   
   <!-- Contact info -->
-  <a class="nav-link" href="#">Contact info <span class="sr-only">(current)</span></a>
+  <a class="nav-link" href="contact.html">Contact info <span class="sr-only">(current)</span></a>
               </ul>
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search">
@@ -145,7 +145,7 @@
             <!-- <a href="https://discord.gg/fJZKErEnPa"><i class="fab fa-discord fa-lg desc" style="color: #5865F2;"></i></a> -->
         </div>
         <div class="sidebar">
-            <img src="images/logo.jpeg" alt="">
+            <img width="100px" height="100px" src="images/logo1.jpeg" alt="">
         </div>
     </div>
     <!-- end of welcome section -->
