Commit at night 12:58

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
       <span class="sr-only">Our Programs</span>
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Poem Compitision</a>
+      <a class="dropdown-item" href="poem.html">Poem Compitision</a>
       <a class="dropdown-item" href="#">Art- Compitision</a>
       <a class="dropdown-item" href="#">others</a>
   </div>   
