--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <span class="sr-only">Our Programs</span>
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Poem Compitision</a>
-      <a class="dropdown-item" href="#">Art- Compitision</a>
+      <a class="dropdown-item" href="poem.html">Poem Compitision</a>
+      <a class="dropdown-item" href="Art.html">Art- Compitision</a>
       <a class="dropdown-item" href="#">others</a>
   </div>   
   <!-- Contact info -->
@@ -109,21 +109,21 @@
         <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (3).jpg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
           <h3>FAR WESTERN UNIVERSITY</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, voluptatem.</p>
-        </div>
+          <i>A world-class academic institution with academic excellence, creative innovation, and research-based education.</i>
+        </div> 
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (6).jpg" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
             <h3>SCHOOL OF ENGINEERING</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, voluptatem.</p>
+            <i > FOE is to create educational hob for teacher, teacher educators, researchers and other competent human resources as well as contributing on national development by providing skillfull and trained educators.</i>
           </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="images/wallpaperflare.com_wallpaper (7).jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
             <h3>SCHOOL OF ENGINEERING SOCIETY</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, voluptatem.</p>
+            <i >The strategic location of the University in the Far western region would not only support improving the access of local people to higher education but also create dynamism on the overall development of the region.</i>
           </div>
       </div>
     </div>
