init commit at 2:20 night

--- a/3semister.html
+++ b/3semister.html
@@ -48,9 +48,9 @@
 </nav>
 </div>
 <a href="index.html"><img id="logo" alt="Personal Logo" src="images/logo1.jpeg"></a>
-<div class="welcome"><span id="welcome">Advisory Team</span></div>
+<div class="welcome"><span id="welcome">Third_Semister</span></div>
 <hr id="underline">
-<h3>Advisory HOD</h3>
+<h3>Third_Semister</h3>
 
 <script>
     setWidth("underline", getWidth("welcome"));
