--- a/index.html
+++ b/index.html
@@ -46,20 +46,25 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="about.html">About-Us <span class="sr-only">(current)</span></a>
                 </li>
                 <!-- Our teams-->
 <div class="btn-group">
-    <button type="button" class="btn btn-dark" >Our Team</button>
+    <button type="button" class="btn btn-dark" >Our Notes Resources</button>
     <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="sr-only">Our teams</span>
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="Executives.html">Executive committee</a>
-      <a class="dropdown-item" href="Advisory.html">Advisory Team</a>
-      <a class="dropdown-item" href="Commnity_Coordinators.html">Community Coordinators</a>
+      <a class="dropdown-item" href="1semister.html">First-semister</a>
+      <a class="dropdown-item" href="2semister.html">Second-Semister</a>
+      <a class="dropdown-item" href="3semister.html">Third-semister</a>
+      <a class="dropdown-item" href="4semister.html">Fourth-semister</a>
+      <a class="dropdown-item" href="5semister.html">Fifth-semister</a>
+      <a class="dropdown-item" href="6semister.html">Sixth-semister</a>
+      <a class="dropdown-item" href="7semister.html">Seventh-semister</a>
+      <a class="dropdown-item" href="8semister.html">Eighth-semister</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Suporting Leads</a>
+      <a class="dropdown-item" href="#">Extra-workshops</a>
     </div>
   </div>
 
@@ -76,7 +81,7 @@
   </div>            
 
   <!-- News and Notices -->
-  <a class="nav-link" href="#">News and Notices <span class="sr-only">(current)</span></a>
+  <a class="nav-link" href="https://www.facebook.com/permalink.php?story_fbid=pfbid0wzoYyrrn2qirxaP6jzjTn56CMQxU9eXmTBdVzkSJMzkDFJzn1if8obfAjpqWoZYEl&id=112105471510341">News and Notices <span class="sr-only">(current)</span></a>
   <!-- Events -->
   <div class="btn-group">
     <button type="button" class="btn btn-dark">Programs</button>
