--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="globalstyle.css">
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="styles/globalstyle.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <script src="https://kit.fontawesome.com/5f5bb1c58f.js" crossorigin="anonymous"></script>
     <script src="global.js"></script>
     <meta charset="UTF-8">
